# internal/domain/model/admin.go
@@ -1,0 +1,12 @@
+package model
+
+type CreateStaffRequest struct {
+	Email       string `json:"email" binding:"required,email"`
+	Name        string `json:"name" binding:"required"`
+	PhoneNumber string `json:"phoneNumber" binding:"required"`
+	Password    string `json:"password" binding:"required"`
+}
+
+type CreateStaffResponse struct {
+	Id int64 `json:"id"`
+}
